# labelman

./: .gitignore  Dockerfile  README.md  WORKFLOW.md  labelman.sh  pyproject.toml
.ishipped/: card.md
docs/: DESIGN.md
src/labelman/: build.py  check.py  cli.py  errors.py  integrations.py  label.py  rename.py  schema.py  suggest.py  web.py
src/labelman/descriptors/: blip.boutiques.json  clip.boutiques.json
src/labelman/scripts/: blip.sh  clip.sh
tests/: test_build.py  test_button_states.py  test_check.py  test_cli.py  test_integrations.py  test_label.py  test_parse.py  test_qwen_vl.py  test_rename.py  test_suggest.py  test_terms.py  test_threshold.py  test_thumbnails.py  test_web.py
tests/fixtures/: valid_full.yaml  valid_minimal.yaml
